@@ -3,5 +3,6 @@ EBUILD cld-meta-10.0.ebuild 6079 RMD160 8e44b93588d4e3f5022cd014e344811ce87fdc90
 EBUILD cld-meta-10.2-r1.ebuild 6598 RMD160 70dff715c5ad301a7429b409d1e469db727e211c SHA1 3448abaf0b545a1be9942d54eed0094b1f0cb060 SHA256 6efafa5697474599da3c85ae496229b6d7f53f9b2abfd7e07b2a28d28504beb8
 EBUILD cld-meta-10.3.91.ebuild 6045 RMD160 30c7c43f510bc1df1e25c8c4491773dac375f264 SHA1 ff2e9fb197a81b2d78f74eae42fc24eee8045b3f SHA256 01dc0493f2fc153f54ca80e542a1467593d16f243db50b836de024e6a76044e8
 EBUILD cld-meta-10.4-r1.ebuild 6438 RMD160 2536b4e88042bd691f9d306ea7e21fa3fe9c24a6 SHA1 f86dbdea89eac42d861032494655ad5d92dd0425 SHA256 41941b0dcdbbc4d9200d590b93901b16a29de55f889ffdecbc622a319cf81c01
-MISC ChangeLog 802 RMD160 7e8053d30d596d6b437bd6c8a63a44326703ae76 SHA1 763c442eb59d227706ae4f2f5bb8dfd1da5cd4fb SHA256 af8422a40ee12cd8eba36300bb9aeba14b024358c0422d4eb2ebd570ad6a3532
+EBUILD cld-meta-10.5.83.ebuild 1045 RMD160 1b99f1d6e27af982f076de3f1440c41ca5d4c050 SHA1 173ec1880f9c1e02932df40564191e5d35aef0c7 SHA256 c2b8304eec92a63ec1df7dded588c2c66318942ed872905edab12f431dda93e7
+MISC ChangeLog 944 RMD160 a724b89d044e31a755756fcd7e305a56f1729f4a SHA1 451ab03dd89ab8bbccd148d4336f407db6745e6b SHA256 fd515751bcd00b9d416d204e71097c6b4da52caed9803c54d508eb81e7b503c4
 MISC metadata.xml 261 RMD160 2aceeb761944d521f163c4b6069c36bc75b0ee1c SHA1 ef324fde01725a0c12d658e689002edffe695b6c SHA256 8bf4a47c7586811fc0bf26d75abbf0f4bc7bb6a9ed501b34622c4d822de83591
