@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cld-meta-10.5.83 (07 Jun 2010)
+
+  07 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +cld-meta-10.5.83.ebuild:
+  version bump
+
 *cld-meta-10.4-r1 (05 May 2010)
 
   05 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
